# llama_index_rag

./: .gitignore  README.md  pyproject.toml
llamaindex_demo/: app.py
