[tool.poetry]
name = "llamaindex-demo"
version = "0.1.0"
description = ""
authors = ["Anwesh43 <anweshthecool0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
llama-index = "^0.11.3"
chromadb = "^0.5.5"
llama-index-vector-stores-chroma = "^0.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "llamaindex_demo:app"